Changing moon.Header titleAbove CSS to avoid overflow issues.
Enyo-DCO-1.1-Signed-off-by: Gray Norton <gray.norton@lge.com>

--- a/css/Header.less
+++ b/css/Header.less
@@ -30,9 +30,11 @@
 	border: none;
 }
 .moon-header-title-above {
-  margin-top:5px;
-	width: 30px;
+	margin-top:5px;
 	height: 1.2em;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 /* Main Title */
