--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -1848,8 +1848,10 @@
 }
 .moon-header-title-above {
   margin-top: 5px;
-  width: 30px;
   height: 1.2em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 /* Main Title */
 .moon-header-title-wrapper {
